[package]
name = "hue-mie"
version = "0.1.0"
authors = ["Edwin de Jong <edejong@fastmail.fm>"]
edition = "2018"

[dependencies]
astro = "2.0.0"
chrono = "0.4.6"
log = "0.4.6"
env_logger = "0.6.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
ssdp = "0.7"
dirs = "1.0.5"

[dependencies.philipshue]
version = "0.3.3"
default-features = false
features = ["unstable", "upnp"]
path = "../philipshue"
